# calculator

./: .gitignore  CMakeLists.txt  README.md
include/calculator/: calculator.hpp
tests/: CMakeLists.txt  test_calculator.cpp
